fixed SectionsMenu on mobile devices and MobileNav fully using NabLink & Link components

--- a/src/Components/Header/MobileNav.module.scss
+++ b/src/Components/Header/MobileNav.module.scss
@@ -25,6 +25,7 @@
 }
 
 .userInfo .img {
+  display: block;
   --size: 70px;
   min-width: var(--size);
   min-height: var(--size);
